# src/main/java/com/example/productapi/controller/AuthRequest.java
@@ -1,0 +1,23 @@
+package com.example.productapi.controller;
+
+public class AuthRequest {
+    private String username;
+    private String password;
+
+    // Getters and setters
+    public String getUsername() {
+        return username;
+    }
+
+    public void setUsername(String username) {
+        this.username = username;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+}
