# src/main/resources/openapi.yml
@@ -185,6 +185,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/auth/login:
+    post:
+      summary: Authenticate user and generate JWT token
+      operationId: authenticateUser
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequest'
+      responses:
+        '200':
+          description: JWT token and expiration date
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        '400':
+          description: Invalid username or password
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     ProductRequest:
@@ -286,3 +311,27 @@ components:
           type: string
           minLength: 1
           description: Detailed error message
+    AuthResponse:
+      type: object
+      properties:
+        token:
+          type: string
+          description: JWT token
+        expirationDate:
+          type: string
+          format: date-time
+          description: Token expiration date
+    AuthRequest:
+      type: object
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          minLength: 1
+          description: Username of the user
+        password:
+          type: string
+          minLength: 1
+          description: Password of the user
